--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,9 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')  // 스프링부트용 jpa 추상화 라이브러리, 관리 알아서 해줌
     compile('com.h2database:h2') // 메모리에서 실행 재시작 마다 초기화->테스트에 좋음
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.security:spring-security-test')
     compile('org.springframework.boot:spring-boot-starter-mustache')
     compile('org.springframework.boot:spring-boot-starter-oauth2-client') // 소셜 로그인 관리용 의존성
+    compile('org.springframework.session:spring-session-jdbc')
 }
 
