--- a/build.gradle
+++ b/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-mustache')
     compile('org.springframework.boot:spring-boot-starter-oauth2-client') // 소셜 로그인 관리용 의존성
     compile('org.springframework.session:spring-session-jdbc')
+    compile('org.springframework.session:spring-session-jdbc:2.1.6.RELEASE')
+    compile('org.mariadb.jdbc:mariadb-java-client')
 }
 
