--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,23 @@ before_install:
 
 script: "./gradlew clean build"
 
+before_deploy:
+  - zip -r freelec-springboot2-webervice *
+  - mkdir -p deploy
+  - mv freelec-springboot2-webservic.zip deploy/freelec-springboot2-webservice.zip
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+
+    bucket: chaejm55-springboot2-build
+    region: ap-northease-2
+    skip_cleanup: true
+    acl: private
+    local_dir: deploy
+    wait-until-deployed: true
+
 # CI 실행 완료 시 메일로 알람
 notifications:
   email:
