--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ before_install:
 script: "./gradlew clean build"
 
 before_deploy:
-  - zip -r freelec-springboot2-webservice *
+  - zip -r springboot2-book *
   - mkdir -p deploy
-  - mv freelec-springboot2-webservice.zip deploy/freelec-springboot2-webservice.zip
+  - mv springboot2-book.zip deploy/springboot2-book.zip
 
 deploy:
   - provider: s3
