--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ deploy:
     secret_access_key: $AWS_SECRET_KEY
 
     bucket: chaejm55-springboot2-build
-    region: ap-northease-2
+    region: ap-northeast-2
     skip_cleanup: true
     acl: private
     local_dir: deploy
